k8s/cloud/public/base/artifact_tracker_versions.yaml
# yamllint disable-file
# autogenerated do not edit manually
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artifact-tracker-server
spec:
  template:
    spec:
      containers:
      - name: artifact-tracker-server
        env:
        - name: PL_VIZIER_VERSION
          value: "0.14.14"
        - name: PL_CLI_VERSION
          value: "0.8.5"
        - name: PL_OPERATOR_VERSION
          value: "0.1.7"
