k8s/cloud/public/base/deployment_image_pull_secrets_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: all
spec:
  template:
    spec:
      imagePullSecrets:
      - name: artifact-registry-creds
