k8s/cloud/public/base/statefulset_image_pull_secrets_patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: all
spec:
  template:
    spec:
      imagePullSecrets:
      - name: artifact-registry-creds
